[gd_scene load_steps=6 format=3 uid="uid://cgxq6eoi6xe5o"]

[ext_resource type="PackedScene" uid="uid://cy6vv7byaw1ub" path="res://assets/player.gltf" id="1_ey0mb"]
[ext_resource type="Script" path="res://src/player/player.gd" id="1_o6pad"]
[ext_resource type="Script" path="res://src/player/anti_collider.gd" id="3_m4br7"]
[ext_resource type="Script" path="res://src/player/reticle.gd" id="4_wig7f"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1rxue"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_o6pad")

[node name="Body" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_1rxue")

[node name="Mesh" parent="Body" instance=ExtResource("1_ey0mb")]
transform = Transform3D(-0.011, 0, -9.61651e-10, 0, 0.011, 0, 9.61651e-10, 0, -0.011, 0, 0, 0)

[node name="TwistPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0)

[node name="AntiCollider" type="SpringArm3D" parent="TwistPivot/PitchPivot"]
spring_length = 3.0
script = ExtResource("3_m4br7")

[node name="Camera" type="Camera3D" parent="TwistPivot/PitchPivot/AntiCollider"]

[node name="Interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="Interface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_wig7f")

[node name="Top" type="Line2D" parent="Interface/Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="Interface/Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="Interface/Reticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="Interface/Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[connection signal="rigid_body_hit" from="." to="." method="_on_rigid_body_hit"]
